--- a/www/global.css
+++ b/www/global.css
@@ -57,6 +57,12 @@ body {
     "Consolas", "Courier New", monospace;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  max-width: 1028px;
+  margin: 0 auto;
+  padding: 0.5em;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
 }
 
 img, picture, video, canvas, svg {
