--- a/www/global.css
+++ b/www/global.css
@@ -69,7 +69,7 @@ img, picture, video, canvas, svg {
   max-width: 100%;
 }
 
-input, button, textarea, select {
+input, button, textarea, select, pre {
   font: inherit;
 }
 
