--- a/www/styles.css
+++ b/www/styles.css
@@ -76,7 +76,8 @@ h1 {
 
 .cta-buttons {
   display: flex;
-  gap: 1em;
+  row-gap: 2em;
+  column-gap: 1em;
   justify-content: center;
   flex-wrap: wrap;
   margin-bottom: 2em;
